Fix to out-of-alignment bird.
Bird was unaligned with mad libs.

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -94,7 +94,7 @@ div.bird {
     left: 0; }
   div.bird#bird2 {
     background: url(../images/bird_flight_2.png) no-repeat 0px 0px;
-    top: 1680px;
+    top: 1710px;
     left: 0; }
 
 div.wrapper {
